Fixed vertical overflow

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -5,10 +5,11 @@ html, body{
   justify-content: center;
   align-items: center;
   margin: auto;
-  height:100vh;
+  min-height:100vh;
   background-color: rgb(0, 0, 0);
   font-family:'JetBrains Mono';
   color: rgb(255, 255, 255);
+  overflow:auto;
 }
 
 #card{
@@ -16,7 +17,6 @@ html, body{
   display:flex;
   flex-direction: column;
   border: 1px solid rgb(255, 255, 255);
-  overflow:hidden;
 }
 
 #top-rectangle{
@@ -54,7 +54,7 @@ img:hover{
   #social-icons{
     display: flex;
     flex-direction: row;
-    gap:4px;
+    gap:8px;
     justify-content: center;
   }
 }
